--- a/project.json
+++ b/project.json
@@ -22,11 +22,6 @@
   },
 
   "tools": {
-    "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
-      "version": "1.0.0-preview2-final",
-      "imports": "portable-net45+win8+dnxcore50"
-    },
-    "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final",
     "Microsoft.EntityFrameworkCore.Tools": {
         "version": "1.0.0-preview2-final",
         "imports": "portable-net45+win8+dnxcore50"
@@ -54,20 +49,17 @@
 
   "publishOptions": {
     "include": [
-      "wwwroot",
-      "Views",
-      "appsettings.json",
-      "web.config"
+      "appsettings.json"
     ]
   },
 
   "scripts": {
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+  
   },
 
   "tooling": {
     "defaultNamespace": "Firefly"
   },
 
-  "userSecretsId": "adding-ef-core-on-osx"
+  "userSecretsId": "firefly"
 }
