--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,9 @@
     "TestConnectionString" : "User ID=escortmat;Password=943855ae-8136-44a6;Host=postgres.croaazlqckj4.eu-west-1.rds.amazonaws.com;Port=5432;Database=escortmat;Pooling=true;",
     "ConnectionString" : "User ID=postgres;Password=;Host=localhost;Port=5432;Database=postgres;Pooling=true;Search Path=firefly,public",
     "DefaultSchema": "firefly"
-  } 
+  },
+  "Resources": {
+    "DefaultLimit": 10,
+    "ShowTotalCount": true
+  }
 }
