--- a/project.lock.json
+++ b/project.lock.json
@@ -10148,7 +10148,8 @@
       "Microsoft.Extensions.Logging.Debug >= 1.0.0",
       "Microsoft.NETCore.App >= 1.0.0",
       "Npgsql.EntityFrameworkCore.PostgreSQL >= 1.0.2",
-      "Npgsql.EntityFrameworkCore.PostgreSQL.Design >= 1.0.2"
+      "Npgsql.EntityFrameworkCore.PostgreSQL.Design >= 1.0.2",
+      "System.Text.Encodings.Web >= 4.0.0"
     ],
     ".NETCoreApp,Version=v1.0": []
   },
