X509 distributed certificate support, Dockerification

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,10 @@
   "Resources": {
     "DefaultLimit": 10,
     "ShowTotalCount": true
+  },
+  "Keys": {
+    "OwnCertificate": true,
+    "CertificatePath": "keys/oauth-certificate.pfx",
+    "CertificatePassword": "d8aeee9f-6f58-44f7-93cc-73ca59566f68"
   }
 }
