--- a/project.json
+++ b/project.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.0"
+      "version": "1.0.0",
+      "type": "platform"
     },
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
@@ -27,10 +28,8 @@
 
   "tools": {
     "Microsoft.EntityFrameworkCore.Tools": {
-        "version": "1.0.0-preview2-final",
-        "imports": "portable-net45+win8+dnxcore50"
-    },
-    "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final"
+        "version": "1.0.0-preview2-final"
+    }
   },
 
   "frameworks": {
