Logger fix, Docs update, cleanup

--- a/appsettings.Template.json
+++ b/appsettings.Template.json
@@ -16,8 +16,8 @@
     "ShowTotalCount": true
   },
   "Keys": {
-    "OwnCertificate": true,
-    "CertificatePath": "keys/<certificate-name.pfx>",
+    "OwnCertificate": false,
+    "CertificatePath": "keys/<your-certificate.pfx>",
     "CertificatePassword": "<certificate password>"
   }
 }
